# python-learn

./: .gitignore  README.md  pyproject.toml
alien_invasion_game/: alien.py  alien_invasion.py  bullet.py  game_stats.py  settings.py  ship.py
django/: README.md
django/accounts/: urls.py
django/accounts/templates/registration/: login.html  register.html
django/learning_logs/: models.py  urls.py  views.py
django/learning_logs/migrations/: 0001_initial.py  0002_entry.py  0003_topic_owner.py
django/learning_logs/templates/learning_logs/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
django/ll_project/: settings.py
langgraph/: README.md  main.py  tool_node.py
matplotlib/: die.py  mpl_squares.py  random_walk.py
pyspark/: main.ipynb  main.py
