[tool.poetry]
name = "python-learn"
version = "0.1.0"
description = ""
authors = ["liuxuan <liuxuan4567@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
pyspark = "^3.5.1"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
